# astrodust_optprops

./: .gitignore  README.md  pyproject.toml
examples/Fomalhaut/: fomalhaut_demo.py  fomalhaut_spectrum.txt
src/astrodust_optprops/: __init__.py  material.py  optics_core.py  particles.py  star.py
src/optprops/: __init__.py  classes.py  core.py  io.py  material.py  optics_core.py  particles.py  star.py
tests/: test_results_consistency.py  vega_spectrum.txt
